--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,12 @@
+spring:
+  ai:
+    embedding:
+      transformer:
+        onnx:
+          modelUri: https://huggingface.co/onnx-models/paraphrase-multilingual-MiniLM-L12-v2-onnx/resolve/main/model.onnx
+          modelOutputName: token_embeddings
+        tokenizer:
+          uri: https://huggingface.co/onnx-models/paraphrase-multilingual-MiniLM-L12-v2-onnx/resolve/main/tokenizer.json
 logging:
   level:
     tracer: TRACE
